vlib/v/checker/tests/const_match_invalid_type_range_err.vv
const start = `a`

const end = 2

match 5 {
	start...end {
		println(start)
	}
	else {}
}

b := match 5 {
	start...end {
		3
	}
	else {
		2
	}
}
println(b)
